[package]
name = "bevy_voronoi"
description = "A low-level Bevy library to generate Voronoi diagrams from 2d meshes"
categories = ["graphics", "game-development", "game-engines", "rendering"]
version = "0.4.0"
authors = ["Miguel Albernaz"]
repository = "https://github.com/malbernaz/bevy_voronoi"
license = "MIT"
readme = "README.md"
edition = "2021"
exclude = ["static/*"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_winit",
  "bevy_sprite",
  "bevy_log",
] }

[dev-dependencies]
bevy = { version = "0.16", features = ["bevy_dev_tools"] }

[[example]]
name = "sdf"
path = "examples/sdf.rs"

[[example]]
name = "alpha_mask"
path = "examples/alpha_mask.rs"
