[package]
name = "bevy_voronoi"
description = "A low-level Bevy library to generate Voronoi diagrams from 2d meshes"
categories = ["graphics", "game-development", "game-engines", "rendering"]
version = "0.4.1"
authors = ["Miguel Albernaz"]
repository = "https://github.com/malbernaz/bevy_voronoi"
license = "MIT"
readme = "README.md"
edition = "2021"
exclude = ["static/*"]

[dependencies]
bevy = { path = "../bevy", default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_winit",
  "bevy_sprite_render",
  "bevy_log",
] }
radsort = "0.1.1"

[dev-dependencies]
bevy = { path = "../bevy", features = ["dynamic_linking", "bevy_dev_tools"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "sdf"
path = "examples/sdf.rs"

[[example]]
name = "alpha_mask"
path = "examples/alpha_mask.rs"
